# src/Server/openapi.json
@@ -1796,6 +1796,18 @@
               "null",
               "string"
             ]
+          },
+          "claimCount": {
+            "type": "integer",
+            "format": "int32",
+            "default": 0
+          },
+          "leaseExpiresAt": {
+            "type": [
+              "null",
+              "string"
+            ],
+            "format": "date-time"
           }
         }
       },
